--- a/catPhotoApp.html
+++ b/catPhotoApp.html
@@ -52,7 +52,8 @@
             <input id="energetic" type="checkbox" name="personality" value="energetic"> <label for="energetic">Energetic</label>
           </fieldset>
           <input type="text" name="catphotourl" placeholder="cat photo URL" required>
-          <button type="submit">>
+          <button type="submit"></button>
+        <form>
       </section>
     </main>
     <footer>
